--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <div id="card-inline">
         <ul class="list-inline">
           <div id="div-left"><li>
-                <a href="https://flavien0808.github.io/welcome/"  target="_blank"><img src="assets/img/MBW_logo.png" class="MBW_logo" alt="" width="100px"></a></div>
+                <a href="https://meta-baka-world.github.io/MBW_Welcome/"  target="_blank"><img src="assets/img/MBW_logo.png" class="MBW_logo" alt="" width="100px"></a></div>
 
           <div id="div-right">
 
-            <li><a href="index.html" class="btn-landing" target="_blank">Neemy's Profile </a></li>
+            <li><a href="https://meta-baka-world.github.io/Neemy_Profile/" class="btn-landing" target="_blank">Neemy's Profile </a></li>
             <li><a href="index.html" class="btn-landing" target="_blank">Katie's Profile</a></li>
-            <li><a href="Project" class="btn-landing" target="_blank">Meta Baka World Project</a></li>
-            <li><a href="index.html" class="btn-landing" target="_blank">Sign In</a></li>
+            <li><a href="https://meta-baka-world.github.io/Meta_Baka_World_Project/" class="btn-landing" target="_blank">Meta Baka World Project</a></li>
+            <li><a href="https://meta-baka-world.github.io/Sign-In/" class="btn-landing" target="_blank">Sign In</a></li>
 
       <!--=======================SEARCH BAR JS ======================= -->
 
@@ -133,41 +133,43 @@
 
 <footer class="footer-clean">
       <!--=======================WAVES DIV ======================= -->
-<div class="waves">
-<div class="wave" id="wave1"></div>
-<div class="wave" id="wave2"></div>
-<div class="wave" id="wave3"></div>
-<div class="wave" id="wave4"></div>
-</div>
-<div>
-<ul class="social_icon">
+     <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+     </div>
+                 <div>
 
-<li><a href="https://www.instagram.com/meta_baka_world0/"target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-<li><a href="https://twitter.com/Meta_Baka_World"target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
-<li><a href="https://www.facebook.com/profile.php?id=100074678550407"target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
-<li><a href="https://www.snapchat.com/add/meta_bakaworld"target="_blank"><ion-icon name="logo-snapchat"></ion-icon></a></li>
-<li><a href="https://www.linkedin.com/in/meta-baka-a80734225/"target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-<li><a href="https://www.youtube.com/channel/UCtV2R5gz-a9ATqDm8k7ce6g"target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
-<li><a href="https://github.com/Flavien0808"target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+                       <ul class="social_icon">
 
-</ul>
-<ul class="menu">
-<img src="images/reaper.png" alt="devil cat" width="151.5px" height="166.5px">
-<li><a href="https://flavien0808.github.io/welcome/"target="_blank">Home</a></li>
-<li><a href="#">About</a></li>
-<li><a href="#">Services</a></li>
-<li><a href="#">Team</a></li>
-<li><a href="#">Contact</a></li>
-<img src="images/devil_cat.png" alt="devil cat" width="151.5px" height="166.5px">
-</ul>
-<p class="copyright">©2021 Meta Baka World | All Rights Deserved</p>
+                         <li><a href="https://www.instagram.com/meta_baka_world0/"target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                         <li><a href="https://twitter.com/Meta_Baka_World"target="_blank"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                         <li><a href="https://www.facebook.com/profile.php?id=100074678550407"target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                         <li><a href="https://www.snapchat.com/add/meta_bakaworld"target="_blank"><ion-icon name="logo-snapchat"></ion-icon></a></li>
+                         <li><a href="https://www.linkedin.com/in/meta-baka-a80734225/"target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                         <li><a href="https://www.youtube.com/channel/UCtV2R5gz-a9ATqDm8k7ce6g"target="_blank"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                         <li><a href="https://github.com/Meta-Baka-World"target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+
+                       </ul>
+                       <ul class="menu">
+                         <img src="images/reaper.png" alt="devil cat"     width="151.5px"
+                             height="166.5px">
+                         <li><a href="https://meta-baka-world.github.io/MBW_Welcome/"target="_blank">Home</a></li>
+                         <li><a href="https://meta-baka-world.github.io/MBW_About/">About</a></li>
+                         <li><a href="https://meta-baka-world.github.io/MBW_Services/">Services</a></li>
+                         <li><a href="https://meta-baka-world.github.io/MBW_Team/">Team</a></li>
+                         <li><a href="https://meta-baka-world.github.io/MBW_Contact/">Contact</a></li>
+                         <img src="images/devil_cat.png" alt="devil cat"     width="151.5px"
+                             height="166.5px">
+                       </ul>
+                           <p class="copyright">©2021 Meta Baka World | All Rights Deserved</p>
 
 
 
 
-
-</div>
-</footer>
+                 </div>
+     </footer>
 </div>
 
 
@@ -176,20 +178,20 @@
 
 
 <div id="to-top">
-<button onclick="topFunction()" id="to-top"class="material-icons" title="Go to top"><i class="fas fa-angle-double-up"></i></button>
+   <button onclick="topFunction()" id="to-top"class="material-icons" title="Go to top"><i class="fas fa-angle-double-up"></i></button>
 </div>
 
 
- <!--======================= To-top JS ======================= -->
-<script language="javascript">
-mybutton=document.getElementById("to-top")
+             <!--======================= To-top JS ======================= -->
+            <script language="javascript">
+            mybutton=document.getElementById("to-top")
 
- function topFunction() {
-   document.body.scrollTop = 0;
-   document.documentElement.scrollTop = 0;
-}
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js" charset="utf-8"></script>
-<script src="load.js" charset="utf-8"></script>
-</body>
+             function topFunction() {
+               document.body.scrollTop = 0;
+               document.documentElement.scrollTop = 0;
+            }
+            </script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js" charset="utf-8"></script>
+            <script src="load.js" charset="utf-8"></script>
+   </body>
 </html>
